<resources>
  <string name="app_name">App Locker</string>
  <string name="title_apps">Apps</string>
  <string name="title_activity_main">Locked Apps</string>
  <string name="title_settings">Settings</string>
  <string name="title_locked">Locked</string>
  <string name="title_privacy">Privacy</string>
  <string name="create_your_pin">Create your Pin</string>
  <string name="create_your_password">Create your password</string>
  <string name="create_your_pattern">Create your pattern</string>
  <string name="content_description_placeholder">Placeholder</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="login_failure">LoginFailure</string>
  <string name="finger_print">Finger Print</string>
  <string name="input_pin_to_unlock">ENTER PIN TO UNLOCK</string>
  <string name="action_message">Enter an initial pin</string>
  <string name="pattern_vibration">Pattern Vibration</string>
  <string name="security_email">Security Email</string>
  <string name="hide_pattern_trails">Hide Pattern Trails</string>
  <string name="lock_frequency">Lock Frequency</string>
  <string name="unlocked">UnLocked</string>
  <string name="locked">Locked</string>
  <string name="lock">Lock</string>
</resources>
