<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@id/navigation_apps">



  <fragment
    android:id="@+id/navigation_apps"
    android:label="@string/title_apps"
    android:name="com.jawidmohammadi.applocker.controller.ui.apps.AppsFragment"
    tools:layout="@layout/fragment_apps">
    <action
      android:id="@+id/action_navigation_apps_to_navigation_privacy"
      app:destination="@id/navigation_privacy"/>
    <action
      android:id="@+id/action_navigation_apps_to_navigation_settings"
      app:destination="@id/navigation_settings"/>
  </fragment>

  <fragment
    android:id="@+id/navigation_locked"
    android:label="@string/title_locked"
    android:name="com.jawidmohammadi.applocker.controller.ui.locked.LockedFragment"
    tools:layout="@layout/fragment_locked"/>

  <fragment
    android:id="@+id/navigation_privacy"
    android:label="@string/title_privacy"
    android:name="com.jawidmohammadi.applocker.controller.ui.privacy.PrivacyFragment"
    tools:layout="@layout/fragment_privacy"/>

  <fragment
    android:id="@+id/navigation_settings"
    android:label="@string/title_settings"
    android:name="com.jawidmohammadi.applocker.controller.ui.settings.SettingsFragment"
    tools:layout="@layout/fragment_settings"/>
</navigation>