<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

<androidx.recyclerview.widget.RecyclerView
  android:id="@+id/buttons"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/background">


  <Button
    android:id="@+id/create_pin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:background="#FFFFFF"
    android:text="@string/create_your_pin"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toTopOf="@id/create_password"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_chainStyle="packed"/>


  <Button
    android:id="@+id/create_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:background="#FFFFFF"
    android:text="@string/create_your_password"
    android:textSize="24sp"
    app:layout_constraintBottom_toTopOf="@id/create_pattern"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/create_pin"/>

  <Button
    android:id="@+id/create_pattern"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:background="#FFFFFF"
    android:text="@string/create_your_pattern"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/create_password"
    app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>